Fix flash of main menu on mobile devices and correct h1 styling on ung-i pages

--- a/sites/all/themes/cyberhus_evolution/sass/components/_ungi.scss
+++ b/sites/all/themes/cyberhus_evolution/sass/components/_ungi.scss
@@ -78,6 +78,11 @@
   }
 }
 
+body.page-ung-i {
+  h1 {
+    margin: 16px 16px 0;
+  }
+}
 @include breakpoint($tab, true) {
   body.page-ung-i {
     h1 {
